--- a/backend/public/cancel.html
+++ b/backend/public/cancel.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Cancelled</title>
+    <title>Pagamento annullato</title>
+    <link rel="stylesheet" href="main.css">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background: #bfe3dd;
+            color: #222;
+            font-family: 'Monospace', Arial, sans-serif;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             min-height: 100vh;
             margin: 0;
         }
-        .container {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        .kzn-card {
+            background: #fff;
+            border-radius: 16px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+            padding: 32px 24px;
+            max-width: 400px;
+            margin: 0 auto;
             text-align: center;
-            max-width: 500px;
-            width: 90%;
         }
-        .cancel-icon {
-            color: #f44336;
-            font-size: 4rem;
-            margin-bottom: 1rem;
+        .kzn-btn {
+            background: linear-gradient(90deg, #36b9bd 0%, #6fc7a9 100%);
+            color: #f5ffff;
+            border: 2px solid #bfe3dd;
+            border-radius: 32px;
+            padding: 14px 32px;
+            font-size: 18px;
+            font-weight: bold;
+            box-shadow: 0 4px 24px rgba(54,185,189,0.18);
+            cursor: pointer;
+            transition: background 0.2s, transform 0.2s, opacity 0.2s;
+            backdrop-filter: blur(8px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            text-align: center;
+            outline: none;
+            width: auto;
+            min-width: 120px;
+            max-width: 90vw;
+            margin: 24px auto 0 auto;
         }
-        h1 {
-            color: #333;
-            margin-bottom: 1rem;
+        .kzn-btn:hover {
+            background: linear-gradient(90deg, #6fc7a9 0%, #36b9bd 100%);
+            transform: translateY(-2px) scale(1.04);
+            opacity: 0.95;
         }
-        p {
-            color: #666;
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
+        @media (max-width: 700px) {
+            .kzn-card { padding: 18px 6px; }
+            .kzn-btn { font-size: 16px; padding: 12px 16px; min-width: 90px; max-width: 98vw; }
         }
-        .button {
-            background-color: #f44336;
-            color: white;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #d32f2f;
+        @media (max-width: 400px) {
+            .kzn-btn { font-size: 14px; padding: 10px 8px; min-width: 70px; }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="cancel-icon">✕</div>
-        <h1>Payment Cancelled</h1>
-        <p>Your payment process was cancelled.</p>
-        <p>If you encountered any issues or would like to try again, please return to the checkout page.</p>
-        <a href="/" class="button">Return to Home</a>
+    <div class="kzn-card">
+        <h2>Pagamento annullato</h2>
+        <p>La transazione è stata annullata. Puoi riprovare in qualsiasi momento.</p>
+        <a href="/" class="kzn-btn">Torna al sito</a>
     </div>
 </body>
 </html> 
