UI: info-panel posizione legacy, glassmorphism solarpunk, nessun cambio layout responsive

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -32,13 +32,16 @@
         bottom: 0;
         width: 100vw;
         height: 40vh;
-        background: rgba(255,255,255,0.97);
+        background: rgba(255,255,255,0.72);
         border-radius: 24px 24px 0 0;
-        box-shadow: 0 -8px 32px rgba(0,0,0,0.22);
+        box-shadow: 0 -8px 32px rgba(54,185,189,0.18);
+        border: 1.5px solid #bfe3dd;
         overflow: hidden;
         z-index: 10;
         display: flex;
         flex-direction: column;
+        backdrop-filter: blur(18px) saturate(1.2);
+        -webkit-backdrop-filter: blur(18px) saturate(1.2);
       }
       .info-content {
         padding: 0 10px 30px 10px;
@@ -116,6 +119,7 @@
           top: 20px;
           bottom: auto;
           border-radius: 10px;
+          box-shadow: 0 8px 32px rgba(54,185,189,0.18);
         }
       }
       .donate-button {
@@ -248,13 +252,16 @@
         bottom: 0;
         width: 100vw;
         height: 40vh;
-        background: rgba(255,255,255,0.97);
+        background: rgba(255,255,255,0.72);
         border-radius: 24px 24px 0 0;
-        box-shadow: 0 -8px 32px rgba(0,0,0,0.22);
+        box-shadow: 0 -8px 32px rgba(54,185,189,0.18);
+        border: 1.5px solid #bfe3dd;
         overflow: hidden;
         z-index: 10;
         display: flex;
         flex-direction: column;
+        backdrop-filter: blur(18px) saturate(1.2);
+        -webkit-backdrop-filter: blur(18px) saturate(1.2);
       }
       .info-content {
         padding: 0 10px 30px 10px;
