--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -65,10 +65,6 @@
       }
       .owner-card {
         min-width: 180px;
-        background: #fff;
-        border-radius: 16px;
-        box-shadow: 0 2px 12px rgba(0,0,0,0.08);
-        padding: 16px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -112,14 +108,14 @@
       }
       @media (min-width: 700px) {
         #info-panel {
-          width: 340px;
-          height: 90vh;
-          left: auto;
-          right: 20px;
-          top: 20px;
-          bottom: auto;
-          border-radius: 10px;
-          box-shadow: 0 8px 32px rgba(54,185,189,0.18);
+          width: 340px !important;
+          height: 90vh !important;
+          left: auto !important;
+          right: 20px !important;
+          top: 20px !important;
+          bottom: auto !important;
+          border-radius: 10px !important;
+          box-shadow: 0 8px 32px rgba(54,185,189,0.18) !important;
         }
       }
       .donate-button {
@@ -243,63 +239,6 @@
         z-index: 100;
         box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         display: none;
-      }
-      /* --- INFO PANEL --- */
-      #info-panel {
-        position: fixed;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 100vw;
-        height: 40vh;
-        background: rgba(255,255,255,0.72);
-        border-radius: 24px 24px 0 0;
-        box-shadow: 0 -8px 32px rgba(54,185,189,0.18);
-        border: 1.5px solid #bfe3dd;
-        overflow: hidden;
-        z-index: 10;
-        display: flex;
-        flex-direction: column;
-        backdrop-filter: blur(18px) saturate(1.2);
-        -webkit-backdrop-filter: blur(18px) saturate(1.2);
-      }
-      .info-content {
-        padding: 0 10px 30px 10px;
-        overflow-y: auto;
-        height: 100%;
-      }
-      .section-title {
-        font-size: 1.2em;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
-      .roadmap-owners {
-        display: flex;
-        flex-direction: row;
-        gap: 24px;
-        width: 100vw;
-        overflow-x: auto;
-        align-items: center;
-        justify-content: flex-start;
-        position: relative;
-      }
-      .owner-card {
-        min-width: 180px;
-        /* background: #fff; */
-        /* border-radius: 16px; */
-        /* box-shadow: 0 2px 12px rgba(0,0,0,0.08); */
-        /* padding: 16px; */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        transition: transform 0.3s;
-      }
-      .owner-avatar {
-        width: 48px;
-        height: 48px;
-        border-radius: 50%;
-        background: #eee;
-        margin-bottom: 8px;
       }
     </style>
   </head>
