--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -124,36 +124,26 @@
         left: 50%;
         transform: translateX(-50%);
         z-index: 9999;
-        background: linear-gradient(90deg, #36b9bd 0%, #6fc7a9 100%);
-        color: #f5ffff;
-        border: 2px solid #bfe3dd;
-        border-radius: 32px;
-        padding: 16px 32px;
-        font-size: 18px;
-        font-weight: bold;
-        box-shadow: 0 4px 24px rgba(54,185,189,0.18);
-        cursor: pointer;
-        transition: background 0.2s, transform 0.2s, opacity 0.2s;
-        backdrop-filter: blur(8px);
-        display: flex;
-        align-items: center;
-        gap: 10px;
+        width: auto;
+        max-width: 95vw;
+        min-width: 120px;
+        margin: 0 auto;
+        transform-origin: center;
       }
       .donate-button:hover {
         background: linear-gradient(90deg, #6fc7a9 0%, #36b9bd 100%);
-        transform: translateX(-50%) translateY(-2px) scale(1.04);
+        transform: scale(1.04);
         opacity: 0.95;
       }
       @media (max-width: 700px) {
         .donate-button {
-          left: 50%;
           bottom: 10px;
-          padding: 14px 18px;
-          font-size: 16px;
-          width: calc(100vw - 40px);
-          max-width: 400px;
-          min-width: 180px;
-          transform: translateX(-50%);
+          max-width: 98vw;
+        }
+      }
+      @media (max-width: 400px) {
+        .donate-button {
+          max-width: 99vw;
         }
       }
       /* --- BUTTON UNIVERSALE --- */
@@ -207,29 +197,6 @@
         box-shadow: 0 2px 12px rgba(0,0,0,0.08);
         padding: 16px;
         margin: 10px 0;
-      }
-      /* --- DONATE BUTTON SPECIFICO --- */
-      .donate-button {
-        position: fixed;
-        bottom: 32px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 9999;
-        width: auto;
-        max-width: 95vw;
-        min-width: 120px;
-        margin: 0 auto;
-      }
-      @media (max-width: 700px) {
-        .donate-button {
-          bottom: 10px;
-          max-width: 98vw;
-        }
-      }
-      @media (max-width: 400px) {
-        .donate-button {
-          max-width: 99vw;
-        }
       }
       /* --- BACK BUTTON --- */
       .back-button {
