Fix definitivo: il pulsante donazione eredita hover di .kzn-btn, resta sempre centrato come gli altri

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -130,11 +130,7 @@
         margin: 0 auto;
         transform-origin: center;
       }
-      .donate-button:hover {
-        background: linear-gradient(90deg, #6fc7a9 0%, #36b9bd 100%);
-        transform: scale(1.04);
-        opacity: 0.95;
-      }
+      /* RIMOSSO .donate-button:hover: ora eredita solo l'hover di .kzn-btn */
       @media (max-width: 700px) {
         .donate-button {
           bottom: 10px;
